--- a/TP02/Lab03/Windows/UI.Desktop.csproj
+++ b/TP02/Lab03/Windows/UI.Desktop.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -80,6 +83,10 @@
     <ProjectReference Include="..\Business.Entities2\Business.Entities.csproj">
       <Project>{2ebc6568-6683-44da-adf7-1a65f58f2b02}</Project>
       <Name>Business.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Business.Logic\Business.Logic.csproj">
+      <Project>{8b5bd16f-a27f-4665-9401-b715423a7582}</Project>
+      <Name>Business.Logic</Name>
     </ProjectReference>
     <ProjectReference Include="..\Util\Util.csproj">
       <Project>{6fab6617-01ec-4f45-b72a-be178c43e617}</Project>
