Arreglamos el error del UsuarioDesktop : AppliactionForm - error de resx también

--- a/TP02/TP2L04/Data.Database/Data.Database.csproj
+++ b/TP02/TP2L04/Data.Database/Data.Database.csproj
@@ -66,6 +66,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business.Entities2\Business.Entities.csproj">
+      <Project>{2ebc6568-6683-44da-adf7-1a65f58f2b02}</Project>
+      <Name>Business.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
