--- a/TP02/TP2L04/Windows/App.config
+++ b/TP02/TP2L04/Windows/App.config
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<connectionStrings>
+		<add name="ConnStringLocal"
+		providerName="System.Data.SqlClient"
+		connectionString="Server=localhost;Database=tp2_net;Integrated
+Security=false; User=net; Password=net;"/>
+		<add name="ConnStringExpress"
+		providerName="System.Data.SqlClient"
+		connectionString="Server=.\SQLExpress;Database=tps_net;
+Integrated Security=false; User=net; Password=net;"/>
+		<add name="ConnStringServerISI"
+		providerName="System.Data.SqlClient"
+		connectionString="Server=serverisi; Database=tp2_net; Integrated
+Security=false; User=net; Password=net;"/>
+	</connectionStrings>
 </configuration>
