Se logro acceso a bd. Quede en paso 17 lab 05

--- a/TP02/TP2L04/Windows/App.config
+++ b/TP02/TP2L04/Windows/App.config
@@ -4,11 +4,11 @@
 		<add name="ConnStringLocal"
 		providerName="System.Data.SqlClient"
 		connectionString="Server=localhost;Database=tp2_net;Integrated
-Security=false; User=net; Password=net;"/>
+Security=false; User=LAPTOP-M7H35J9F\Gamba; Password=;"/>
 		<add name="ConnStringExpress"
 		providerName="System.Data.SqlClient"
-		connectionString="Server=.\SQLExpress;Database=tps_net;
-Integrated Security=false; User=net; Password=net;"/>
+		connectionString="Server=.\SQLExpress;Database=tp2_net;
+Integrated Security=true; User=net; Password=net;"/>
 		<add name="ConnStringServerISI"
 		providerName="System.Data.SqlClient"
 		connectionString="Server=serverisi; Database=tp2_net; Integrated
