--- a/TP02/TP2L05/Data.Database/Data.Database.csproj
+++ b/TP02/TP2L05/Data.Database/Data.Database.csproj
@@ -57,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapter.cs" />
-    <Compile Include="UsuarioAdapter.cs" />
+    <Compile Include="TablesAdapter\ComisionesAdapter.cs" />
+    <Compile Include="TablesAdapter\UsuarioAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
