--- a/TP02/TP2L05/Business.Entities2/Business.Entities.csproj
+++ b/TP02/TP2L05/Business.Entities2/Business.Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Modulo.cs" />
     <Compile Include="ModuloUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablesEntities\Plan.cs" />
     <Compile Include="TablesEntities\Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
