--- a/TP02/TP2L05/Business.Logic/Business.Logic.csproj
+++ b/TP02/TP2L05/Business.Logic/Business.Logic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TablesLogic\ComisionesLogic.cs" />
+    <Compile Include="TablesLogic\PlanLogic.cs" />
     <Compile Include="TablesLogic\UsuarioLogic.cs" />
   </ItemGroup>
   <ItemGroup>
