--- a/TP02/TP2L05/Windows/UI.Desktop.csproj
+++ b/TP02/TP2L05/Windows/UI.Desktop.csproj
@@ -55,6 +55,12 @@
     <Compile Include="ABMListForms\Comisiones.Designer.cs">
       <DependentUpon>Comisiones.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMListForms\Planes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMListForms\Planes.Designer.cs">
+      <DependentUpon>Planes.cs</DependentUpon>
+    </Compile>
     <Compile Include="DesktopForms\ApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,8 +105,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectForms\SelectPlan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectForms\SelectPlan.Designer.cs">
+      <DependentUpon>SelectPlan.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ABMListForms\Comisiones.resx">
       <DependentUpon>Comisiones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMListForms\Planes.resx">
+      <DependentUpon>Planes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DesktopForms\ApplicationForm.resx">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
@@ -133,6 +148,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SelectForms\SelectPlan.resx">
+      <DependentUpon>SelectPlan.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.Config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -162,8 +180,6 @@
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SelectForms\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
