--- a/TP02/TP2L05/Business.Entities2/Business.Entities.csproj
+++ b/TP02/TP2L05/Business.Entities2/Business.Entities.csproj
@@ -38,16 +38,15 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessEntity.cs" />
-    <Compile Include="TablesEntities\Comision.cs" />
     <Compile Include="Modulo.cs" />
     <Compile Include="ModuloUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TablesEntities\Plan.cs" />
-    <Compile Include="TablesEntities\Usuario.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
