--- a/TP02/TP2L05/Business.Logic/Business.Logic.csproj
+++ b/TP02/TP2L05/Business.Logic/Business.Logic.csproj
@@ -43,9 +43,7 @@
   <ItemGroup>
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TablesLogic\ComisionesLogic.cs" />
-    <Compile Include="TablesLogic\PlanLogic.cs" />
-    <Compile Include="TablesLogic\UsuarioLogic.cs" />
+    <Compile Include="UsuarioLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business.Entities2\Business.Entities.csproj">
