--- a/TP02/TP2L05/Windows/UI.Desktop.csproj
+++ b/TP02/TP2L05/Windows/UI.Desktop.csproj
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <NoWin32Manifest>true</NoWin32Manifest>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,93 +46,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ABMListForms\Comisiones.cs">
+    <Compile Include="ApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABMListForms\Comisiones.Designer.cs">
-      <DependentUpon>Comisiones.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ABMListForms\Planes.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMListForms\Planes.Designer.cs">
-      <DependentUpon>Planes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DesktopForms\ApplicationForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DesktopForms\ApplicationForm.Designer.cs">
+    <Compile Include="ApplicationForm.Designer.cs">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DesktopForms\ComisionesDesktop.cs">
+    <Compile Include="UsuarioDesktop.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DesktopForms\ComisionesDesktop.Designer.cs">
-      <DependentUpon>ComisionesDesktop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DesktopForms\PlanDesktop.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DesktopForms\PlanDesktop.Designer.cs">
-      <DependentUpon>PlanDesktop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Main\login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Main\login.Designer.cs">
-      <DependentUpon>login.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Main\FormMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Main\FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DesktopForms\UsuarioDesktop.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DesktopForms\UsuarioDesktop.Designer.cs">
+    <Compile Include="UsuarioDesktop.Designer.cs">
       <DependentUpon>UsuarioDesktop.cs</DependentUpon>
     </Compile>
-    <Compile Include="ABMListForms\Usuarios.cs">
+    <Compile Include="Usuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABMListForms\Usuarios.Designer.cs">
+    <Compile Include="Usuarios.Designer.cs">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectForms\SelectPlan.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SelectForms\SelectPlan.Designer.cs">
-      <DependentUpon>SelectPlan.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="ABMListForms\Comisiones.resx">
-      <DependentUpon>Comisiones.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ABMListForms\Planes.resx">
-      <DependentUpon>Planes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DesktopForms\ApplicationForm.resx">
+    <EmbeddedResource Include="ApplicationForm.resx">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DesktopForms\ComisionesDesktop.resx">
-      <DependentUpon>ComisionesDesktop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DesktopForms\PlanDesktop.resx">
-      <DependentUpon>PlanDesktop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Main\login.resx">
-      <DependentUpon>login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Main\FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DesktopForms\UsuarioDesktop.resx">
+    <EmbeddedResource Include="UsuarioDesktop.resx">
       <DependentUpon>UsuarioDesktop.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ABMListForms\Usuarios.resx">
+    <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -148,9 +85,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SelectForms\SelectPlan.resx">
-      <DependentUpon>SelectPlan.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="App.Config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -180,6 +114,5 @@
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
